[project]
name = "kiro-gateway"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "hypothesis>=6.151.9",
    "loguru>=0.7.3",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "questionary>=2.1.1",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.41.0",
]
